manifests/components/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          args:
            ["python", "-m", "uvicorn", "dmi.api.main:app", "--host", "0.0.0.0"]
          image: backend:latest
          ports:
            - containerPort: 8000
